--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Jekyll Powered Start Bootstrap Template
-email: vidhyav656@gmail.com
+title: Ielectro Fix Solutions
+email: raymondsteve1790@hotmail.com
 description: Stylish Portfolio is a responsive, one page portfolio theme for Bootstrap created by Start Bootstrap. The theme features multiple content sections with an off canvas navigation menu.
 
 keywords: jekyll, bootstrap, jekyll-site, jekyll-website, html, bootstrap4, bootstrap-4, bootstrap-theme, bootstrap-template, portfolio-website, portfolio-theme, open-source, free, google-anaytics, github-pages
 
-baseurl: "/startbootstrap-stylish-portfolio-jekyll" # the subpath of your site, e.g. /blog
-url: "https://vidhyav656.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://1019studios.org/ielectro-stylish" # the base hostname & protocol for your site, e.g. http://example.com
 
-github_username:  vidhyav656
+github_username:  tmeralus
 facebook_username:  "#"
-twitter_username:  vidhyav656
+twitter_username:  techgameteddy
 google_analytics_tracking_id: UA-129738661-1
 # Build settings
 markdown: kramdown
