--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,11 @@ keywords: jekyll, bootstrap, jekyll-site, jekyll-website, html, bootstrap4, boot
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://1019studios.org/ielectro-stylish" # the base hostname & protocol for your site, e.g. http://example.com
 
-github_username:  tmeralus
-facebook_username:  "#"
-twitter_username:  techgameteddy
-google_analytics_tracking_id: UA-129738661-1
+#github_username:  tmeralus
+#facebook_username:  "#"
+instagram_username: ielectrofix  #https://www.instagram.com/ielectrofix
+#twitter_username:  
+#google_analytics_tracking_id: #
 # Build settings
 markdown: kramdown
 theme: minima
