feat(new-notes): added new descriptions, footer, and more

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ theme: minima
 plugins:
   - jekyll-feed
 incremental: true
-
+site_designer: '1019 Studios'
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
